--- a/THMorse1.html
+++ b/THMorse1.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Treasure Hunt</title>
+		<title>Project Cicada:Task 1</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,15 +15,15 @@
 	</head>
 	<body class="is-preload">
 
-		<!-- Header -->
-			
+	
 		<!-- Wrapper -->
 			<div id="wrapper">
 
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">Morse Code</h1>
+							<h1 class="major"><div class="glitch" data-text="Task 1">Task 1</div> </h1>
+							<div id="fonthelp">Decode the following and type below!	</div>
 							<div id="fonthelp">-.-. .- .-. -.. .. -. .- .-..  -- . .--. .... .. ... - ---</div>
 							<!--LOGIN PAGE-->
 									<form name="login">
@@ -43,15 +43,15 @@
 											}
 										}
 									</script>
-									
+									<h6>Credits: <br>
+										ygssoni
+										from StackOverflow for the Code </h6>	
 							
 						</div>
 					</section>
 
 			</div>
 
-		<!-- Footer -->
-			
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
