--- a/THcong.html
+++ b/THcong.html
@@ -15,17 +15,14 @@
 	</head>
 	<body class="is-preload">
 
-		<!-- Header -->
-			
-
 		<!-- Wrapper -->
 			<div id="wrapper">
 
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-						<div class="font1">CONGRATULATIONS</div>
-						<div class="font2">YOU HAVE CRACKED THE CODE</div>
+							<div class="glitch2" data-text="Congratulations">Congratulations</div> 
+						<div class="glitch" data-text="YOU HAVE CRACKED THE CODE">YOU HAVE CRACKED THE CODE</div>
 							<script src="https://www.wpromotions.eu/confetti.min.js"></script>
 <script>confetti.start()</script>
 <script>setTimeout(function(){confetti.stop();},3000)</script>
@@ -34,8 +31,7 @@
 
 			</div>
 
-		<!-- Footer -->
-			
+
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
