--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	ENTER HINT HERE
 -->
 <html>
 	<head>
@@ -17,18 +15,17 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper">
-<div id="fonthelp"><!-- Main -->
+<!-- Main -->
 	<section id="main" class="wrapper">
 		<div class="inner">
-			<h2 class="major">Log in</h1>
-			<!--LOGIN PAGE-->
+			<div id="fonthelp"><h2 class="major">Log in</h1></div>
+			<!--LOGIN PAGE--><div id="fonthelp2">
 					<form name="login">
 						Username<input type="text" name="userid"/>
 						<br>
 						Password<input type="password" name="pswrd"/>
 						<br>
 						<input type="button"  onclick="check(this.form)" value="Login"/>  
-						<input type="reset" value="Cancel" href="THMorse1.html">
 					</form>
 					<script language="javascript">
 						function check(form) { /*function to check userid & password*/
@@ -41,6 +38,7 @@
 							}
 						}
 					</script>
+					</div>
 					
 			
 		</div>
