fixed spelling errors

--- a/THAscii.html
+++ b/THAscii.html
@@ -52,7 +52,7 @@
 											return response.json(); 
 											}
 										function check(form) { 
-											postData(`ttps://stark-citadel-51007.herokuapp.com/`, {
+											postData(`https://stark-citadel-51007.herokuapp.com/`, {
 													"game":"ascii",
 													"password":form.pswrd.value
 												}).then(data=>{
