--- a/THMorse1.html
+++ b/THMorse1.html
@@ -49,7 +49,7 @@
 											return response.json(); 
 											}
 										function check(form) { 
-											postData(`ttps://stark-citadel-51007.herokuapp.com/`, {
+											postData(`https://stark-citadel-51007.herokuapp.com/`, {
 													"game":"morse1",
 													"password":form.pswrd.value
 												}).then(data=>{
