--- a/werta-reths-sfgsdv-sfd.html
+++ b/werta-reths-sfgsdv-sfd.html
@@ -50,7 +50,7 @@
 											return response.json(); 
 											}
 										function check(form) { 
-											postData(`ttps://stark-citadel-51007.herokuapp.com/`, {
+											postData(`https://stark-citadel-51007.herokuapp.com/`, {
 													"game":"charades",
 													"password":form.pswrd.value
 												}).then(data=>{
