--- a/THcong.html
+++ b/THcong.html
@@ -22,7 +22,9 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<div class="glitch2" data-text="Congratulations">Congratulations</div> 
-						<div class="glitch" data-text="YOU HAVE CRACKED THE CODE">YOU HAVE CRACKED THE CODE</div>
+						<div class="glitch" data-text="YOU HAVE CRACKED THE CODE">YOU HAVE CRACKED THE CODE</div><br><br>
+						<div id="fonthelp"><a target="blank" href="https://forms.gle/fgsq7GpwaiHreV1Y6"><button><div id="fonthelp">Click Here!!</div></button>
+						</a></div>
 							<script src="https://www.wpromotions.eu/confetti.min.js"></script>
 <script>confetti.start()</script>
 <script>setTimeout(function(){confetti.stop();},3000)</script>
