--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						Password<input type="password" name="pswrd"/>
 						<br>
 						<input type="button"  onclick="check(this.form)" value="Login"/>  
-						<input type="reset" value="Cancel" href="THMorse1.html">
+						<input type="reset" value="Cancel" href="THMorse1.html"><!--WERE YOU LOOKING FOR THIS ??????????? Morse-->
 					</form>
 					<script language="javascript">
 						async function postData(url = '', data = {}) {
