--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	<section id="main" class="wrapper">
 		<div class="inner">
 			<div id="fonthelp"><h2 class="major">Log in</h1></div>
+				<!--WERE YOU LOOKING FOR THIS ??????????? Morse--><a href="THMorse1.html"></a>
 			<!--LOGIN PAGE--><div id="fonthelp2">
 					<form name="login">
 						Username<input type="text" name="userid"/>
@@ -26,7 +27,7 @@
 						Password<input type="password" name="pswrd"/>
 						<br>
 						<input type="button"  onclick="check(this.form)" value="Login"/>  
-						<input type="reset" value="Cancel" href="THMorse1.html"><!--WERE YOU LOOKING FOR THIS ??????????? Morse-->
+						<input type="reset" value="Cancel" href="THMorse1.html">
 					</form>
 					<script language="javascript">
 						async function postData(url = '', data = {}) {
