--- a/werta-reths-sfgsdv-sfd.html
+++ b/werta-reths-sfgsdv-sfd.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 
-<html>
+<html >
 	<head>
 		<title>Project Cicada:Task 2</title>
 		<meta charset="utf-8" />
@@ -17,7 +17,7 @@
 
 				<!-- Main -->
 					<section id="main" class="wrapper">
-						<div class="inner">
+						<div class="inner" style="top: 80%;">
 							<h1 class="major"><div class="glitch" data-text="Task 2">Task 2</div> </h1>
 							<div id="fonthelp">"Pictures tell more than Words"<br> What do these tell ?</div>
 							<div id="fonthelp"><img src="PIC1.jpg" alt=""><img src="PIC3.jpg" alt=""><img src="PIC4.jpeg" alt=""></div>
