updated congrats link

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 								"game": form.userid.value,
 								"password": form.pswrd.value
 							}).then(data => {
-								window.open("THCong.html")
+								window.open("THcong.html")
 							})
 								.catch(data => alert("The Inspect says it all"))
 
