--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<div id="fonthelp">
 					<h2 class="major">Log in</h1>
 				</div>
-				<!--WERE YOU LOOKING FOR THIS ??????????? Morse--><a href="THMorse1.html"></a>
+				<!--you found it!! click whats in the anchor tag--><a href="THMorse1.html"></a>
 				<!--LOGIN PAGE-->
 				<div id="fonthelp2" style="  width:100%;
 				display: flex;
