task 5 image change

--- a/asg-dsfh-rw-h-jdfg-s-dr-dg.html
+++ b/asg-dsfh-rw-h-jdfg-s-dr-dg.html
@@ -23,7 +23,7 @@
 							<div class="inner">
 								<h1 class="major"><div class="glitch" data-text="Task 5">Task 5</div> </h1>
 								<div id="fonthelp">Last task (Take Days not Months)</div>
-								<div id="fonthelp"><img src="PIC2.jpeg" alt="" width="100%" height="auto" ></div>
+								<div id="fonthelp"><img src="PIC2.jpg" alt="" width="100%" height="auto" ></div>
 						
 								<div id="fonthelp">A is the Username <br> B is the Password</div>
 								<div id="fonthelp"><a target="blank" href="index.html"><button><div id="fonthelp">The login Page is Waiting</div></button>
